# CrystalNet

./: .gitignore  CMakeLists.txt  README.md  tags
cfg/: cifar.data  classifier_test.cfg
src/: CMakeLists.txt
src/Utils/: config.cpp  config_list.cpp  list.cpp  utils.cpp
src/algorithm/: gemm.cpp  im2col.cpp
src/data/: image.cpp  matrix.cpp
src/include/Utils/: common.h  config.h  config_list.h  list.h  tree.h  utils.h
src/include/algorithm/: gemm.h  im2col.h
src/include/data/: image.h  matrix.h
src/include/net/: activations.h  convolutional_layer.h  fullyconnected_layer.h  layer.h  model.h  module.h  network.h
src/net/: activations.cpp  basic_layer.cpp  convolutional_layer.cpp  fullyconnected_layer.cpp  layer.cpp  model.cpp  module.cpp  network.cpp
test/: CMakeLists.txt
test/data/: data_test.cpp
win_kernel/data/: image.cpp  image.h  matrix.cpp  matrix.h
win_kernel/utils/: config.h  config_list.cpp  config_list.h  list.cpp  list.h  utils.cpp
